# DraftPickBackend

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-683862b117369f30c23c9031c5766779710b0fd9f663264423443323266959ec.json  query-bbd0a4cf6a64d4dafe6401739d5a8d7ad055a50a7abe07ca7a9d55e871aada09.json
data/: sunny.db
src/: main.rs
src/dto/: claims_dto.rs  draft_dto.rs  mod.rs  player_dto.rs  request_team_dto.rs  team_dto.rs  team_update_dto.rs  user_dto.rs
src/routes/: draft.rs  mod.rs  players.rs  teams.rs  users.rs
src/services/: auth_user.rs  draft_player_formatter.rs  mod.rs  websocket.rs
